--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,17 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto);
+
+html {
+    font-size: 16px;
+    min-width: 320px;
+    box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
+}
+
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+    font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 }
