--- a/src/index.css
+++ b/src/index.css
@@ -13,5 +13,5 @@ html {
 }
 
 body {
-  font-family: 'Roboto', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+  font-family: 'Helvetica Neue', 'Helvetica', 'Roboto', 'Arial', sans-serif;
 }
