--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto);
+@import url(https://fonts.googleapis.com/css?family=Helvetica);
 
 html {
   font-size: 16px;
