--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto);
-
 html {
   font-size: 16px;
   min-width: 320px;
@@ -13,5 +11,5 @@ html {
 }
 
 body {
-  font-family: 'Roboto', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+  font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
 }
